# EasyStr

./: .gitignore  CMakeLists.txt  EasyStr.c  EasyStr.h  LICENSE  Makefile  README.md  Source.c  easystr.pc.in
docs/: DOCUMENTATION.md
examples/: demo.c
include/: EasyStr.h
src/: EasyStr.c
